# orqest

./: .dockerignore  .env  .gitignore  404.html  CHANGELOG.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE_LIST.md  LICENSE  README.md  SECURITY.md  SKILLS.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_tests.py  sitemap.xml  test_tutorial_2.py
.claude/: ARCHITECTURE.md  AUDIT_2026-04-25.md  IMPLEMENTATION_2026-04-25.md  PRINCIPLES.md  ROADMAP.md  VISION.md
.claude/designs/: 01-metacognition.md  02-self-healing.md  03-ui-and-procedural-memory.md  04-goal-driven-optimization.md
.claude/skills/: gstack  orqest  orqest.skill
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  test.yml
.junie/: guidelines.md
api/agents/: index.html
api/autonomy/: index.html
api/compound/: index.html
api/config/: index.html
api/healing/: index.html
api/hooks/: index.html
api/io-utils/: index.html
api/mcp/: index.html
api/memory/: index.html
api/metacognition/: index.html
api/observability/: index.html
api/optimization/: index.html
api/orchestration/: index.html
api/plan/: index.html
api/sandbox/: index.html
api/tools/: index.html
api/topology_optimization/: index.html
api/ui/: index.html
api/utils/: index.html
api/workbench/: index.html
benchmarks/: README.md  __init__.py
benchmarks/bird/: __init__.py  baseline.py
benchmarks/coding/: README.md  _runners.py  codebench.py  run.py  trial_averages.json
benchmarks/spider/: __init__.py  baseline.py  dataset.py  harness.py
changelog/: index.html
concepts/agent-as-tool/: index.html
concepts/agents/: index.html
concepts/autonomy/: index.html
concepts/compound-tools/: index.html
concepts/event-bus-publish-hook/: index.html
concepts/execution-plan/: index.html
concepts/generative_ui/: index.html
concepts/healing/: index.html
concepts/hooks-and-lifecycle/: index.html
concepts/mcp/: index.html
concepts/memory/: index.html
concepts/metacognition/: index.html
concepts/observability/: index.html
concepts/optimization/: index.html
concepts/orchestration/: index.html
concepts/reasoning/: index.html
concepts/sandbox/: index.html
concepts/session-persistence/: index.html
concepts/skills/: index.html
concepts/sse-sidecar/: index.html
concepts/state-and-history/: index.html
concepts/streaming/: index.html
concepts/sub-agent-tool/: index.html
concepts/topology_optimization/: index.html
concepts/web-tools/: index.html
concepts/workbench/: index.html
demo/: README.md
demo/backend/: _config.py  requirements.txt  server.py  tools.py
demo/frontend/: .gitignore  package-lock.json  package.json
demo/polymath/: CLAUDE.md  README.md  dev.sh  docker-compose.yml
demo/polymath/backend/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
demo/polymath/backend/polymath/: agent.py  config.py  embedder.py  orchestrator.py  runtime.py  server.py  session_metrics.py  state.py  tab_respawn.py  workbench_factory.py
demo/polymath/backend/polymath/artifacts/: store.py
demo/polymath/backend/polymath/autonomy/: analyst.py
demo/polymath/backend/polymath/db/: models.py  session.py
demo/polymath/backend/polymath/routers/: artifacts.py  autonomy.py  chat.py  config_router.py  events.py  files.py  memory.py  sessions.py  snapshot.py  tabs.py  takeover.py  ui.py  viewport.py
demo/polymath/backend/polymath/sandbox/: manager.py  schema.py
demo/polymath/backend/polymath/system_prompts/: orchestrator.md
demo/polymath/backend/polymath/tools/: arxiv.py  autonomy.py  browser.py  citations.py  experiment.py  fs.py  memory.py  pdf.py  plan.py  report.py  shell.py  tabs.py  ui.py  web.py
demo/polymath/backend/tests/: conftest.py  test_artifacts.py  test_chat.py  test_config.py  test_events.py  test_healing_integration.py  test_health.py  test_plan.py  test_routers_tabs.py  test_runtime.py  test_sandbox_manager.py  test_session_metrics.py  test_sessions.py  test_tab_respawn.py  test_takeover.py  test_tools_autonomy.py  test_tools_fs.py  test_tools_plan.py  test_tools_report.py  test_tools_shell.py  test_tools_tabs.py  test_tools_ui.py  test_ui_routes.py
docs/: FEATURE_LIST.md  ORQEST_POTENTIAL.md  PROJECT_STRUCTURE.md  agent_lifecycle_hooks.md  changelog.md  error_handling_superiority.md  flexible_agent_composition.md  flexible_agent_initialization.md  flexible_agent_initialization_summary.md  getting-started.md  implementation_summary.md  index.md  notebooks.md
docs/api/: agents.md  autonomy.md  compound.md  config.md  healing.md  hooks.md  io-utils.md  mcp.md  memory.md  metacognition.md  observability.md  optimization.md  orchestration.md  plan.md  sandbox.md  tools.md  topology_optimization.md  ui.md  utils.md  workbench.md
docs/concepts/: agent-as-tool.md  agents.md  autonomy.md  compound-tools.md  event-bus-publish-hook.md  execution-plan.md  generative_ui.md  healing.md  hooks-and-lifecycle.md  mcp.md  memory.md  metacognition.md  observability.md  optimization.md  orchestration.md  skills.md  (+10 more)
examples/: README.md  __init__.py  error_handling_example.py  flexible_orchestrator_example.py  lifecycle_hooks_example.py  orchestrator_example.py
getting-started/: index.html
notebooks/: 01_cognitive_substrate.ipynb  02_meta_orchestrator.ipynb  03_generative_ui.ipynb  04_orchestrated_workflow.ipynb  05_reasoning.ipynb  06_optimization_basic.ipynb  07_optimization_compound.ipynb  08_topology_search_basic.ipynb  09_topology_with_gepa.ipynb  10_runtime_topology.ipynb  11_dynamic_tools.ipynb  12_combo_autonomous_coder.ipynb  README.md  index.html
orqest/: __init__.py  config.py  hooks.py
scripts/: download_spider.py  smoke_openrouter.py
search/: search_index.json
test_examples/: orchestrator_and_planner.py  test_orchestrator_and_planner.py
tests/: README.md  conftest.py  test_budget_tool_results.py  test_config.py  test_context_manager.py  test_hook_decision.py  test_hooks.py
(+437 files in other folders)
