[project]
name = "orqest"
version = "0.8.0"
description = "Typed agent primitives and orchestration on top of pydantic-ai — memory, autonomy, healing, metacognition, generative UI, MCP, optimization."
authors = [
  { name="Kareem El Sayed", email="k.elsayed@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
  "agents",
  "agentic",
  "pydantic-ai",
  "llm",
  "orchestration",
  "mcp",
  "memory",
  "metacognition",
  "self-healing",
  "generative-ui",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Typing :: Typed",
]
dependencies = [
  "loguru>=0.7.3",
  "pydantic>=2.11.7",
  "pydantic-ai>=1.37.0",
  "pytest-asyncio>=1.0.0",
  "python-dotenv>=1.1.1",
  "aiosqlite>=0.20.0",
  "mcp>=1.0.0",
  "fastapi>=0.136.0",
  "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/Kareemlsd/orqest"
Documentation = "https://kareemlsd.github.io/orqest/"
Repository = "https://github.com/Kareemlsd/orqest"
Changelog = "https://github.com/Kareemlsd/orqest/blob/main/CHANGELOG.md"
Issues = "https://github.com/Kareemlsd/orqest/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orqest*"]

[tool.setuptools.package-data]
"orqest.skills.orqest" = ["SKILL.md", "references/*.md"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "pytest-md>=0.2.0",
    "pytest-emoji>=0.2.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.28",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "nbconvert>=7.0",
]
optimization = [
    # The [full] extra is required: gepa's runtime deps (litellm for the
    # default reflection_lm path, datasets for some adapters, tqdm/cloudpickle)
    # are all gated by it. The bare `gepa` install only ships Protocol classes.
    "gepa[full]>=0.1.1",
]
docker = [
    # Tier-2 sandbox (DockerSandbox) host-side requirements.
    # The container itself ships in the published `orqest/agent-runtime`
    # image and does not need this group.
    "docker>=7.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
markers = [
    "docker: integration tests requiring a running Docker daemon AND the orqest/agent-runtime image (skipped by default)",
]

[tool.ruff]
lint.select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "C90",
    "S",
    "A",
    "D",
]

lint.ignore = [
    "D203",
    "D213"
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
known-third-party = ["pandas", "pydantic", "matplotlib", "shapely", "scipy", "munch"]

[tool.ruff.lint.mccabe]
max-complexity = 10
