[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymath"
version = "0.0.1"
description = "Polymath — the Orqest killer demo. A Manus-style general-purpose autonomous agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-ai>=1.37",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2",
  "asyncpg>=0.29",
  "docker>=7.1",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "alembic>=1.13",
]
# orqest is installed OUT-OF-BAND by the Dockerfile's entrypoint (from the
# runtime-mounted volume at /orqest). That mount only exists at `docker run`
# time, not at build time, so we can't reference it as a normal dep here.
# Local-host dev (no Docker) should `pip install -e /home/<you>/repos/orqest`
# in its own venv before `pip install -e .` in this directory.

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3",
  "aiosqlite>=0.20",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["polymath"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default 10s timeout so any misconfigured fixture or network call fails
# loudly instead of hanging the suite. Individual long tests can override.
timeout = 10
timeout_method = "thread"
